--- a/_output.yml
+++ b/_output.yml
@@ -2,7 +2,7 @@ bookdown::bs4_book:
   css: style.css
   theme:
     primary: "#1D0F81"
-  #repo: https://github.com/rstudio/bookdown-demo
+  repo: https://turnerlab-monashuni.github.io/cuttag_workshop_2025/
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
