--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,4 +1,4 @@
-book_filename: "cuttag_workshop_2025"
+book_filename: "Cut & Tag Workshop 2025"
 new_session: false
 before_chapter_script: _common.R
 delete_merged_file: true
